@@ -566,6 +566,12 @@ class RosettaTestCase(TestCase):
         self.assertTrue('French (France), UTF8' in str(r.content))
         self.assertTrue('m_71a6479faf8712e37dd5755cd1d11804' in str(r.content))
 
+    def test_28_issue_gh87(self):
+        "make sure that rosetta_i18n_catalog_filter is passed into the context"
+        r = self.client.get(reverse('rosetta-pick-file') + '?filter=third-party')
+        r = self.client.get(reverse('rosetta-pick-file'))
+        self.assertTrue('<li class="active"><a href="?filter=third-party">' in str(r.content))
+
 
 # Stubbed access control function
 def no_access(user):
